force-app/main/default/objects/Forecast_Item__c/Forecast_Item__c.object-meta.xml
<CustomObject>
    <label>Forecast Item</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Forecast Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>