force-app/main/default/objects/Forecast_Item__c/fields/Master_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Master_Forecast__c</fullName>
    <label>Master Forecast</label>
    <referenceTo>Forecast__c</referenceTo>
    <relationshipLabel>Forecast Item</relationshipLabel>
    <relationshipName>Forecast_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>