force-app/main/default/objects/Forecast_Item__c/fields/OppoAmount__c.field-meta.xml
<CustomField>
    <fullName>OppoAmount__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppoAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>