force-app/main/default/objects/Forecast_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Forecast Item</relationshipLabel>
    <relationshipName>Forecast_Item</relationshipName>
    <type>Lookup</type>
</CustomField>